Added waypoints code for animations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,7 @@
 
                 <!-- Slider script & styles -->
          <script src="{{ site.url }}/js/vendor/jquery.flexslider-min.js"></script>
+         <script src="{{ site.url }}/js/vendor/waypoints.min.js"></script>
         <!-- Start the slider up -->
         <script type="text/javascript" charset="utf-8">
           $(window).load(function() {
