--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -19,9 +19,12 @@
 		<a href="#" class="nav-btn-side" id="nav-btn-close">
 			<i class="icon-remove"></i>
 		</a>
+		<h3>Gouwestad sites</h3>
 		<ul class="nav nav-pills nav-stacked">
-		    <li class="active"><a href="#">Home</a></li>
-		    <li><a href="#">Link</a></li>
-		    <li><a href="#">Link</a></li>
+		    <li><a href="#"><i class="icon-thumbs-up"></i>  Een nieuw soort website</a></li>
+		    <li><a href="#">Resultaatgericht</a></li>
+		    <li><a href="#">Handgemaakt design</a></li>
+		    <li><a href="#">Meten is weten</a></li>
+		    <li><a href="#">Betaalbaar en snel</a></li>
 		</ul>
 	</div>
