--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
         -->
 
         <!-- Stylesheets -->
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.url }}/js/vendor/css/flexslider.css">
         <link rel="stylesheet" href="{{ site.url }}/less/style.css">
 
