--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -21,10 +21,10 @@
 		</a>
 		<h3>Gouwestad sites</h3>
 		<ul class="nav nav-pills nav-stacked">
-		    <li><a href="#"><i class="icon-thumbs-up"></i>  Een nieuw soort website</a></li>
-		    <li><a href="#">Resultaatgericht</a></li>
-		    <li><a href="#">Handgemaakt design</a></li>
-		    <li><a href="#">Meten is weten</a></li>
-		    <li><a href="#">Betaalbaar en snel</a></li>
+		    <li><a href="#"><i class="icon-thumbs-up"></i>  Een nieuw soort <strong>website</strong></a></li>
+		    <li><a href="#"><i class="icon-compass"></i> Gericht op <strong>resultaat</strong></a></li>
+		    <li><a href="#"><i class="icon-pencil"></i> Handgemaakt design</a></li>
+		    <li><a href="#"><i class="icon-bar-chart"></i> Meten is weten</a></li>
+		    <li><a href="#"><i class="icon-eur"></i> Betaalbaar en snel</a></li>
 		</ul>
 	</div>
