--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
 
         <script src="{{ site.url }}/js/main.js"></script>
 
+        <!-- Touch script -->
+        <script src="{{ site.url }}/js/vendor/jquery.hammer.js"></script>
+
                 <!-- Slider script & styles -->
          <script src="{{ site.url }}/js/vendor/jquery.flexslider-min.js"></script>
          <script src="{{ site.url }}/js/vendor/waypoints.min.js"></script>
