--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
         <title>{{ page.title }} | {{ page.tagline }}</title>
         {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
         <meta name="keywords" content="{{ page.keywords }}">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 
         <!--
    
