--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         <script src="{{ site.url }}/js/main.js"></script>
 
         <!-- Touch script -->
-        <script src="{{ site.url }}/js/vendor/hammer.min.js"></script>
+        <!--<script src="{{ site.url }}/js/vendor/hammer.min.js"></script>-->
         <script src="{{ site.url }}/js/vendor/jquery.hammer.js"></script>
 
                 <!-- Slider script & styles -->
