Update some stuff

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -28,3 +28,4 @@
 		    <li><a href="#" class="menu-link"><i class="icon-eur"></i> Betaalbaar en <strong>snel</strong></a></li>
 		</ul>
 	</div>
+    <div id="page-container">
