--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,8 +41,8 @@
         <script src="{{ site.url }}/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
         <!-- Chart.js ?? moeten deze in de head sectie?? -->
-        <script src="{{ site.url }}/js/vendor/charts/Chart.js"></script>
-        <script src="{{ site.url }}/js/vendor/charts/effects.js"></script>
+        <!--<script src="{{ site.url }}/js/vendor/charts/Chart.js"></script>
+        <script src="{{ site.url }}/js/vendor/charts/effects.js"></script>-->
       
     </head>
 
