--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -20,7 +20,7 @@
 		<ul class="nav nav-pills nav-stacked">
 		    <li><a href="#" class="menu-link"><i class="icon-thumbs-up"></i>  Een nieuw soort <strong>website</strong></a></li>
 		    <li><a href="#" class="menu-link"><i class="icon-compass"></i> Gericht op <strong>resultaat</strong></a></li>
-		    <li><a href="#" class="menu-link"><i class="icon-pencil"></i> Handgemaakt <strong>design</strong></a></li>
+		    <li><a href="#design" class="menu-link"><i class="icon-pencil"></i> Handgemaakt <strong>design</strong></a></li>
 		    <li><a href="#" class="menu-link"><i class="icon-bar-chart"></i> Meten is <strong>weten</strong></a></li>
 		    <li><a href="#" class="menu-link"><i class="icon-eur"></i> Betaalbaar en <strong>snel</strong></a></li>
 		</ul>
