--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
 
         <script src="{{ site.url }}/js/main.js"></script>
 
+        <link href="http://vjs.zencdn.net/4.0/video-js.css" rel="stylesheet">
+        <script src="http://vjs.zencdn.net/4.0/video.js"></script>
+
         <!-- Touch script -->
         <script src="{{ site.url }}/js/vendor/hammer.min.js"></script>
         <script src="{{ site.url }}/js/vendor/jquery.hammer.js"></script>
