--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
       
     </head>
 
-    <body id="skrollr-body">
+    <body>
     <!--[if lt IE 9]>
         <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
