--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
                 </div>
             </footer>
         </div>
+      </div>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
