--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,9 +23,16 @@
          <script src="{{ site.url }}/js/vendor/waypoints.min.js"></script>
 
          <script src="{{ site.url }}/js/vendor/skrollr.js"></script>
+          <script src="{{ site.url }}/js/vendor/skrollr.menu.min.js"></script>
+
          <script type="text/javascript">
-          skrollr.init({
-            forceHeight: false,
+          var s = skrollr.init({
+            forceHeight: false
+          });
+
+          skrollr.menu.init(s,{
+            animate: true, //skrollr will smoothly animate to the new position using `animateTo`.
+            duration: 1500, //How long the animation should take in ms.
           });
           </script>
         
