build for a new ipad test

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -25,4 +25,4 @@
 		    <li><a href="#" class="menu-link"><i class="icon-eur"></i> Betaalbaar en <strong>snel</strong></a></li>
 		</ul>
 	</div>
-    	<div class="page-container" id="skrollr-body">
+    	<div class="page-container" id="">
