--- a/_includes/design.html
+++ b/_includes/design.html
@@ -1,6 +1,6 @@
 
    <section class="design" id="design" data-3800="top: 100%;" data-4400="top: 0%" data-6200="top:0%;" data-6800="top:-100%">
-         <video id="example_video_1" class="full-video" data-5000="opacity:0;" data-5800="opacity:1;"
+         <video id="example_video_1" class="full-video visible-lg" data-5000="opacity:0;" data-5800="opacity:1;"
            poster="http://video-js.zencoder.com/oceans-clip.png" data-setup='{"autoplay": true, "controls": false, "loop": false}'>
           <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
           <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
@@ -54,7 +54,7 @@
     </div>
     </section>
 
-    <section class="design-story" data-5800="top:100%;" data-6200="top:0%">
+    <section class="design-story" data-6200="top:100%;" data-6800="top:0%" data-7200="top:-100%">
         <div class="container">
             <div class="row">
                 <div class="col-6">
