--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
           $(window).load(function() {
             $('.flexslider').flexslider({
               animation: "slide",
-              slideshow: false,
+              slideshow: true,
               controlNav: false,
             });
           });
