Updates to sliders

--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -6,61 +6,116 @@
                         <div class="jumbotron">
                             <h1 class="blur" data-2400="color:transparent; text-shadow: 0 0 75px #fff" data-3000="color:#fff; text-shadow: 0 0 0px #fff;">Focus</h1>
                             <h2 data-2400="opacity:0; transform: translate(0,90px);" data-3000="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
-                              <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg <a href="www.facebook.com">Facebook CEO</a></small>
+                              <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg</small>
+                              <img src="{{ site.url }}/img/facebook.jpg" class="img-circle" data-2400="transform[bounce]: scale(0); opacity:0" data-3000="transform: scale(1); opacity: 1;">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="focus-blocks" data-3200="top: 100%;" data-3800="top: 0%" data-4400="top:-100%;">
+    <section class="focus-content">
         <div class="container">
-                <div class="row story-width">
-                    <div class="col-12 text-center">
-                        <p>Focus op wat belangrijk is. Dat product, of die dienst die je aan de man wil brengen, daar moet de aandacht naar uitgaan. Laat randzaken buiten beschouwing en focus op wat echt belangrijk is. 
-                    </div>
+            <div class="row story-width">
+                <div class="col-12 text-center">
+                    <p><strong>Wat wil jij met je website bereiken? Denk je daar wel eens over na?</strong><br>
+                    Websites zijn tegenwoordig voor heel veel bedrijven het belangrijkste communicatiemiddel, maar gek genoeg ook het middel waar het minste aandacht voor is. Vreemd, want het eerste wat mensen zullen doen als ze van je product horen is het Googelen... En? Worden ze enthousiast wanneer ze op je website komen?  Of gaat die website eigenlijk helemaal niet over het product? Een gemiste kans.
+                    Coast is gefocust op resultaat. Dat betekent dat het product het middelpunt is en alles aan het ontwerp gericht is op conversie. Dus geen onnodige informatie (echt, het helpt je niet in Google), geen nieuwsberichten (wie leest die in godsnaam?), maar het verhaal waar de bezoeker naar op zoek is.
+                    </p>
                 </div>
-                <div class="row text-center">
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well" data-600-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-500-top="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-bar-chart icon-super"></i>
-                            <h6><small><em>meer</em></small><br> leads</h6>
+            </div>
+        </div>
+    </section>
+
+    <section class="focus-blocks"  data-3200="top: 100%;" data-3800="top: 0%" data-4000="top: 0%;" data-4400="top:-100%;">
+        <div class="flexslider" id="voordelen">
+            <ul class="slides">
+                <li class="bekijks active-slide" id="bekijks">
+                    <div class="container">
+                        <div class="vert-center">
+                            <div class="row text-center text-box">
+                                <div class="col-6 col-offset-6">
+                                    <h1>Meer bekijks</h1>
+                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                </li>
+                <li class="leads">
+                    <div class="container">
+                        <div class="vert-center">
+                            <div class="row text-center text-box">
+                                <div class="col-6 col-offset-6">
+                                    <h1>Meer Leads</h1>
+                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                   <p>People don’t just hand over their information to anyone. A reputable site, a delightful submission process and a compelling visual narrative will drive more leads for you.
+                                   </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="downloads">
+                    <div class="container">
+                        <div class="vert-center">
+                            <div class="row text-center text-box">
+                                <div class="col-6 col-offset-6">
+                                    <h1>Meer Downloads</h1>
+                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="blocks">
+            <div class="container">
+                <div class="row">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well" data-550-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-450-top="opacity:1; transform: scale(1) translate(0, 0);">
+                    <a class="slide_thumb" rel="0" href="#">
+                        <div class="well" data-3400="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3600="opacity:1; transform: scale(1) translate(0, 0);">
+                            <i class="icon-bar-chart icon-super"></i>
+                            <h6><small>meer</small><br> leads</h6>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
                             <i class="icon-shopping-cart icon-super"></i>
-                            <h6><small><em>meer</em></small><br> verkopen</h6>
+                            <h6><small>meer</small><br> verkopen</h6>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well" data-500-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-400-top="opacity:1; transform: scale(1) translate(0, 0);">
+                        <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
                             <i class="icon-facebook icon-super"></i>
-                            <h6><small><em>meer</em></small><br> volgers</h6>
+                            <h6><small>meer</small><br> volgers</h6>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                      <div class="well"  data-460-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-360-top="opacity:1; transform: scale(1) translate(0, 0);">
+                      <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
                             <i class="icon-bar-chart icon-super"></i>
-                            <h6><small><em>meer</em></small><br> bekijks</h6>
+                            <h6><small>meer</small><br> bekijks</h6>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well"  data-420-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-320-top="opacity:1; transform: scale(1) translate(0, 0);">
+                        <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
                             <i class="icon-bar-chart icon-super"></i>
-                            <h6><small><em>meer</em></small><br> downloads</h6>
+                            <h6><small>meer</small><br> downloads</h6>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <div class="well"  data-400-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-300-top="opacity:1; transform: scale(1) translate(0, 0);">
+                       <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
                             <i class="icon-bar-chart icon-super"></i>
-                            <h6><small><em>meer</em></small><br> signups</h6>
+                            <h6><small>meer</small><br> signups</h6>
                         </div>
                     </div>
                     
                 </div>
-                <div class="row text-center">
-                    <a href="#design" data-menu-top="5900" class="btn btn-primary btn-large">door goed design wordt je onthouden</a>
-                </div>
             </div>
+        </div>
     </section>
