--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,84 +1,86 @@
-   <section class="responsive-showcase" id="special" data-6800="top:100%;" data-7200="top:0%;">
-        <div class="overlay">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h1>Responsive is uit</h1> 
-                    <h3>Wij noemen het <strong>Responsive++</strong></h3>
-                </div>
-            </div>
-        </div>
-        <div class="flexslider">
+   <section class="responsive-showcase" data-6800="top:100%;" data-7200="top:0%;">
+
+        <div class="flexslider-twee" id="special">
           <ul class="slides">
             <li class="showcase-devices">
                 <div class="container"> 
-                    <div class="row vert-box">
-                        <div class="col-7 responsive-design"> 
-                            <img class="desktop" src="img/responsive/desktop.png">
-                            <img class="laptop" src="img/responsive/laptop.png">
-                            <img class="tablet" src="img/responsive/tablet.png">
-                            <img class="tablet-mini" src="img/responsive/tablet-mini.png">
-                            <img class="phone" src="img/responsive/phone.png">
-                        </div>
-                        <div class="col-5 vert-middle">
-                            <h6>Responsive is standaard</h6>
-                            <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
-                            <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup btn-animated"><i class="icon-desktop"></i> <span>Test het</span></button></a>
+                    <div class="vert-center">
+                        <div class="row">
+                            <div class="col-7 responsive-design"> 
+                                <img class="desktop" src="img/responsive/desktop.png">
+                                <img class="laptop" src="img/responsive/laptop.png">
+                                <img class="tablet" src="img/responsive/tablet.png">
+                                <img class="tablet-mini" src="img/responsive/tablet-mini.png">
+                                <img class="phone" src="img/responsive/phone.png">
+                            </div>
+                            <div class="col-5 vert-middle">
+                                <h6>Responsive is standaard</h6>
+                                <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
+                                <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup btn-animated"><i class="icon-desktop"></i> <span>Test het</span></button></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </li>
             <li class="showcase-dekstop">
                 <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/desktop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    <div class="vert-center">
+                        <div class="row">
+                            <div class="col-7 responsive-design"> 
+                                <img src="img/desktop.png">
+                            </div>
+                            <div class="col-5">
+                                <h6>Desktop</h6>
+                                <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                                <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </li>
             <li class="showcase-laptop">
+                <img src="img/laptop.png">
                 <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/laptop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Laptop</h6>
-                        <p>Ook laptops varieren tegenwoordig van zakformaat 11 inch tot 19 inch. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    <div class="vert-center">
+                        <div class="row">
+                            <div class="col-7 responsive-design"> 
+                            </div>
+                            <div class="col-5">
+                                <h6>Laptop</h6>
+                                <p>Ook laptops varieren tegenwoordig van zakformaat 11 inch tot 19 inch. </p>
+                                <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </li>
             <li class="showcase-mobile">
                 <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img src="img/tablet.png">
-                        <img src="img/tablet-mini.png">
-                        <img src="img/phone.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Mobiel</h6>
-                        <p>Naast de 'gewone' tablets zijn er ook 7 inch tablets, en een batterij aan verschillende telefoonschermen</p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    <div class="vert-center">
+                        <div class="row">
+                            <div class="col-7 responsive-design"> 
+                                <img src="img/tablet.png">
+                                <img src="img/tablet-mini.png">
+                                <img src="img/phone.png">
+                            </div>
+                            <div class="col-5">
+                                <h6>Mobiel</h6>
+                                <p>Naast de 'gewone' tablets zijn er ook 7 inch tablets, en een batterij aan verschillende telefoonschermen</p>
+                                <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </li>
           </ul>
+        <div class="nav-showcase">
+            <ul class="nav nav-pills">
+                <li><a>Kies een device: </a></li>
+                <li><a href="#" class="slide_thumb" id="slide-desktop-btn" rel="1">Desktop <i class="icon-desktop"></i></a></li>
+                <li><a href="#" class="slide_thumb" id="slide-laptop-btn" rel="2">Laptop <i class="icon-laptop"></i></a></li>
+                <li><a href="#" class="slide_thumb" id="slide-mobile-btn" rel="3">Mobiel <i class="icon-tablet"></i> <i class="icon-mobile-phone"></i></a></li>
+            </ul>
+        </div>
         </div>
     </section>
-    <div class="row">
-        <div class="col-12 nav-showcase">
-            <div class="nav-showcase">
-                <ul class="nav nav-pills">
-                    <li><a>Kies een device: </a></li>
-                    <li><a href="#" id="slide-desktop-btn">Desktop <i class="icon-desktop"></i></a></li>
-                    <li><a href="#" id="slide-laptop-btn">Laptop <i class="icon-laptop"></i></a></li>
-                    <li><a href="#" id="slide-mobile-btn">Mobiel <i class="icon-tablet"></i> <i class="icon-mobile-phone"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+
