--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -31,6 +31,8 @@
         <div class="flexslider" id="voordelen">
             <ul class="slides">
                 <li class="bekijks active-slide" id="bekijks">
+                    <div class="overlay">
+                    </div>
                     <div class="container">
                         <div class="vert-center">
                             <div class="row text-center text-box">
