--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,4 +1,4 @@
-   <section class="responsive-showcase" data-6800="top:100%;" data-7200="top:0%;">
+   <section class="responsive-showcase" data-5800="top:100%;" data-7000="top:0%;" data-8200="top:0%" data-8201="top:-100%">
 
         <div class="flexslider-twee" id="special">
           <ul class="slides">
@@ -73,14 +73,50 @@
                 </div>
             </li>
           </ul>
-        <div class="nav-showcase">
-            <ul class="nav nav-pills">
-                <li><a>Kies een device: </a></li>
-                <li><a href="#" class="slide_thumb" id="slide-desktop-btn" rel="1">Desktop <i class="icon-desktop"></i></a></li>
-                <li><a href="#" class="slide_thumb" id="slide-laptop-btn" rel="2">Laptop <i class="icon-laptop"></i></a></li>
-                <li><a href="#" class="slide_thumb" id="slide-mobile-btn" rel="3">Mobiel <i class="icon-tablet"></i> <i class="icon-mobile-phone"></i></a></li>
-            </ul>
         </div>
-        </div>
+         <div class="blocks">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 col-sm-4 col-lg-2">
+                        <a class="slide_thumb" rel="0" href="#">
+                            <div class="well" data-3400="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3600="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-bar-chart icon-super"></i>
+                                <h6><small>meer</small><br> leads</h6>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-shopping-cart icon-super"></i>
+                                <h6><small>meer</small><br> verkopen</h6>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-facebook icon-super"></i>
+                                <h6><small>meer</small><br> volgers</h6>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                          <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-bar-chart icon-super"></i>
+                                <h6><small>meer</small><br> bekijks</h6>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-bar-chart icon-super"></i>
+                                <h6><small>meer</small><br> downloads</h6>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                           <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
+                                <i class="icon-bar-chart icon-super"></i>
+                                <h6><small>meer</small><br> signups</h6>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
     </section>
 
