--- a/_includes/resultaten.html
+++ b/_includes/resultaten.html
@@ -1,6 +1,6 @@
 
     
-    <section class="">
+    <section class="resultaten" data-7800="left:100%;" data-8400="left:0%" data-8600="top:0%" data-9600="top:-200%;">
         <div class="container">
             <div class="row story-width">
                 <div class="col-12 text-center">
@@ -12,35 +12,37 @@
             </div>
         </div>
         <div class="container analytics">
-            <img src="{{ site.url }}/img/macbook.png" class="macbook">
-            <svg version="1.1" id="MacBook_Pro_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                 x="0px" y="0px" viewBox="0 0 2500 1500" style="enable-background:new 0 0 2500 1500;"
-                 xml:space="preserve">
-            <polyline style="fill:none;stroke:#008BC9;stroke-width:4; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-400-top="stroke-dashoffset:2000;" data--200-top="stroke-dashoffset:0;" points="723,551 819,563 918,563 1017.5,551 
-                1116.5,539 1215.5,531 1314.5,574 1414,558 1513,531 1612,531 1711,531 1810.5,503 1909.5,482 "/>
-            <circle style="fill:#008BC9;" data-800-top="opacity:0; transform: scale(1);" data-790-top="opacity: 1;"
-             cx="819.5" cy="563.306" r="4.5"/>
-            <circle style="fill:#008BC9;" data-745-top="opacity:0; transform: scale(1);" data-735-top="opacity: 1;"
-            cx="918.558" cy="563.306" r="4.5"/>
-            <circle style="fill:#008BC9;" data-690-top="opacity:0; transform: scale(1);" data-680-top="opacity: 1;"
-            cx="1215.658" cy="531.495" r="4.5"/>
-            <circle style="fill:#008BC9;" data-635-top="opacity:0; transform: scale(1);" data-625-top="opacity: 1;"
-            cx="1114.5" cy="538.676" r="4.5"/>
-            <circle style="fill:#008BC9;" data-580-top="opacity:0; transform: scale(1);" data-570-top="opacity: 1;"
-            cx="1015.5" cy="551.306" r="4.5"/>
-            <circle style="fill:#008BC9;" data-525-top="opacity:0; transform: scale(1);" data-515-top="opacity: 1;"
-            cx="1316.25" cy="574" r="4.5"/>
-            <circle style="fill:#008BC9;" data-470-top="opacity:0; transform: scale(1);" data-460-top="opacity: 1;"
-            cx="1412.898" cy="558.806" r="4.5"/>
-            <circle style="fill:#008BC9;" data-415-top="opacity:0; transform: scale(1);" data-405-top="opacity: 1;"
-            cx="1512.398" cy="531.495" r="4.5"/>
-            <circle style="fill:#008BC9;" data-360-top="opacity:0; transform: scale(1);" data-350-top="opacity: 1;"
-            cx="1610.112" cy="531.495" r="4.5"/>
-            <circle style="fill:#008BC9;" data-305-top="opacity:0; transform: scale(1);" data-300-top="opacity: 1;"
-            cx="1710.398" cy="531.495" r="4.5"/>
-            <circle style="fill:#008BC9;" data-250-top="opacity:0; transform: scale(1);" data-240-top="opacity: 1;"
-            cx="1808.898" cy="503.333" r="4.5"/>
-            </svg>
+            <div class="macbook">
+                <img src="{{ site.url }}/img/macbook.png">
+                <svg version="1.1" id="MacBook_Pro_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                     x="0px" y="0px" viewBox="0 0 2500 1500" style="enable-background:new 0 0 2500 1500;"
+                     xml:space="preserve">
+                <polyline style="fill:none;stroke:#008BC9;stroke-width:4; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-400-top="stroke-dashoffset:2000;" data--200-top="stroke-dashoffset:0;" points="723,551 819,563 918,563 1017.5,551 
+                    1116.5,539 1215.5,531 1314.5,574 1414,558 1513,531 1612,531 1711,531 1810.5,503 1909.5,482 "/>
+                <circle style="fill:#008BC9;" data-800-top="opacity:0; transform: scale(1);" data-790-top="opacity: 1;"
+                 cx="819.5" cy="563.306" r="4.5"/>
+                <circle style="fill:#008BC9;" data-745-top="opacity:0; transform: scale(1);" data-735-top="opacity: 1;"
+                cx="918.558" cy="563.306" r="4.5"/>
+                <circle style="fill:#008BC9;" data-690-top="opacity:0; transform: scale(1);" data-680-top="opacity: 1;"
+                cx="1215.658" cy="531.495" r="4.5"/>
+                <circle style="fill:#008BC9;" data-635-top="opacity:0; transform: scale(1);" data-625-top="opacity: 1;"
+                cx="1114.5" cy="538.676" r="4.5"/>
+                <circle style="fill:#008BC9;" data-580-top="opacity:0; transform: scale(1);" data-570-top="opacity: 1;"
+                cx="1015.5" cy="551.306" r="4.5"/>
+                <circle style="fill:#008BC9;" data-525-top="opacity:0; transform: scale(1);" data-515-top="opacity: 1;"
+                cx="1316.25" cy="574" r="4.5"/>
+                <circle style="fill:#008BC9;" data-470-top="opacity:0; transform: scale(1);" data-460-top="opacity: 1;"
+                cx="1412.898" cy="558.806" r="4.5"/>
+                <circle style="fill:#008BC9;" data-415-top="opacity:0; transform: scale(1);" data-405-top="opacity: 1;"
+                cx="1512.398" cy="531.495" r="4.5"/>
+                <circle style="fill:#008BC9;" data-360-top="opacity:0; transform: scale(1);" data-350-top="opacity: 1;"
+                cx="1610.112" cy="531.495" r="4.5"/>
+                <circle style="fill:#008BC9;" data-305-top="opacity:0; transform: scale(1);" data-300-top="opacity: 1;"
+                cx="1710.398" cy="531.495" r="4.5"/>
+                <circle style="fill:#008BC9;" data-250-top="opacity:0; transform: scale(1);" data-240-top="opacity: 1;"
+                cx="1808.898" cy="503.333" r="4.5"/>
+                </svg>
+            </div>
         </div>
         <div class="container">
             <div class="row">
