--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -49,7 +49,7 @@
                     <div class="container">
                         <div class="vert-center">
                             <div class="row text-center text-box">
-                                <div class="col-6 col-offset-6">
+                                <div class="col-4 col-offset-8">
                                     <h1>Meer Leads</h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
                                    <p>People don’t just hand over their information to anyone. A reputable site, a delightful submission process and a compelling visual narrative will drive more leads for you.
@@ -72,49 +72,113 @@
                         </div>
                     </div>
                 </li>
+                <li class="volgers">
+                    <div class="overlay overlay-img"></div>
+                    <div class="overlay pop-up"></div>
+                    <div class="container">
+                        <div class="vert-center">
+                            <div class="row text-center text-box">
+                                <div class="col-5 col-offset-6">
+                                    <div class="page-header">
+                                        <h1><img class="img-circle" src="http://progroep.github.io/Sharebiz/img/hans-ouwerkerk.jpg"> <small>meer</small> <span>volgers</span></h1>
+                                    </div>
+                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                   <p class="lead">Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <p>Good design is memorable and sharable. Potential customers will share your unique site with their friends and colleagues, resulting in more traffic for you.</p>
+                                   <h5>
+                                       <span class="icon-stack">
+                                          <i class="icon-check-empty icon-stack-base"></i>
+                                          <i class="icon-facebook"></i>
+                                        </span>
+                                        <span class="icon-stack">
+                                          <i class="icon-check-empty icon-stack-base"></i>
+                                          <i class="icon-twitter"></i>
+                                        </span>
+                                        <span class="icon-stack">
+                                          <i class="icon-check-empty icon-stack-base"></i>
+                                          <i class="icon-google-plus"></i>
+                                        </span>
+                                        <span class="icon-stack">
+                                          <i class="icon-check-empty icon-stack-base"></i>
+                                          <i class="icon-instagram"></i>
+                                        </span>
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         
-        <div class="blocks">
+        <div class="blocks" class="hidden-sm">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-sm-4 col-lg-2">
                     <a class="slide_thumb" rel="0" href="#">
                         <div class="well" data-3400="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3600="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-bar-chart icon-super"></i>
+                            <span class="icon-stack">
+                              <i class="icon-circle icon-stack-base"></i>
+                              <i class="icon-thumbs-up"></i>
+                            </span>
                             <h6><small>meer</small><br> leads</h6>
                         </div>
                     </a>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-shopping-cart icon-super"></i>
-                            <h6><small>meer</small><br> verkopen</h6>
-                        </div>
+                        <a class="slide_thumb" rel="1" href="#">
+                            <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
+                                <span class="icon-stack">
+                                  <i class="icon-circle icon-stack-base"></i>
+                                  <i class="icon-shopping-cart"></i>
+                                </span>
+                                <h6><small>meer</small><br> verkopen</h6>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-facebook icon-super"></i>
-                            <h6><small>meer</small><br> volgers</h6>
-                        </div>
+                        <a class="slide_thumb" rel="2" href="#">
+                            <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
+                                <span class="icon-stack">
+                                  <i class="icon-circle icon-stack-base"></i>
+                                  <i class="icon-facebook"></i>
+                                </span>
+                                <h6><small>meer</small><br> volgers</h6>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                      <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-bar-chart icon-super"></i>
-                            <h6><small>meer</small><br> bekijks</h6>
-                        </div>
+                        <a class="slide_thumb" rel="3" href="#">
+                          <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
+                                <span class="icon-stack">
+                                  <i class="icon-circle icon-stack-base"></i>
+                                  <i class="icon-eye-open"></i>
+                                </span>
+                                <h6><small>meer</small><br> bekijks</h6>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-bar-chart icon-super"></i>
-                            <h6><small>meer</small><br> downloads</h6>
-                        </div>
+                        <a class="slide_thumb" rel="4" href="#">
+                            <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
+                                <span class="icon-stack">
+                                  <i class="icon-circle icon-stack-base"></i>
+                                  <i class="icon-cloud-download"></i>
+                                </span>
+                                <h6><small>meer</small><br> downloads</h6>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
-                            <i class="icon-bar-chart icon-super"></i>
-                            <h6><small>meer</small><br> signups</h6>
-                        </div>
+                        <a class="slide_thumb" rel="5" href="#">
+                           <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
+                                <span class="icon-stack">
+                                  <i class="icon-circle icon-stack-base"></i>
+                                  <i class="icon-edit"></i>
+                                </span>
+                                <h6><small>meer</small><br> signups</h6>
+                            </div>
+                        </a>
                     </div>
                     
                 </div>
