--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -8,10 +8,7 @@
                         <div class="row">
                             <div class="col-7 responsive-design"> 
                                 <img class="desktop" src="img/responsive/desktop.png">
-                                <img class="laptop" src="img/responsive/laptop.png">
-                                <img class="tablet" src="img/responsive/tablet.png">
-                                <img class="tablet-mini" src="img/responsive/tablet-mini.png">
-                                <img class="phone" src="img/responsive/phone.png">
+
                             </div>
                             <div class="col-5 vert-middle">
                                 <h6>Responsive is standaard</h6>
@@ -22,7 +19,7 @@
                     </div>
                 </div>
             </li>
-            <li class="showcase-dekstop">
+            <li class="showcase-desktop">
                 <div class="container"> 
                     <div class="vert-center">
                         <div class="row">
@@ -39,11 +36,11 @@
                 </div>
             </li>
             <li class="showcase-laptop">
-                <img src="img/laptop.png">
                 <div class="container"> 
                     <div class="vert-center">
                         <div class="row">
                             <div class="col-7 responsive-design"> 
+                                 <img src="img/laptop.png">
                             </div>
                             <div class="col-5">
                                 <h6>Laptop</h6>
@@ -60,8 +57,6 @@
                         <div class="row">
                             <div class="col-7 responsive-design"> 
                                 <img src="img/tablet.png">
-                                <img src="img/tablet-mini.png">
-                                <img src="img/phone.png">
                             </div>
                             <div class="col-5">
                                 <h6>Mobiel</h6>
@@ -81,38 +76,38 @@
                         <a class="slide_thumb" rel="0" href="#">
                             <div class="well" data-3400="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3600="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-bar-chart icon-super"></i>
-                                <h6><small>meer</small><br> leads</h6>
+                                <h6>leads</h6>
                             </div>
                         </a>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-shopping-cart icon-super"></i>
-                                <h6><small>meer</small><br> verkopen</h6>
+                                <h6>verkopen</h6>
                             </div>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-facebook icon-super"></i>
-                                <h6><small>meer</small><br> volgers</h6>
+                                <h6>volgers</h6>
                             </div>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2">
                           <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-bar-chart icon-super"></i>
-                                <h6><small>meer</small><br> bekijks</h6>
+                                <h6>bekijks</h6>
                             </div>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-bar-chart icon-super"></i>
-                                <h6><small>meer</small><br> downloads</h6>
+                                <h6>downloads</h6>
                             </div>
                         </div>
                         <div class="col-6 col-sm-4 col-lg-2">
                            <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
                                 <i class="icon-bar-chart icon-super"></i>
-                                <h6><small>meer</small><br> signups</h6>
+                                <h6>signups</h6>
                             </div>
                         </div>
                         
