Laatste updates en diverse probeersels

--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -50,7 +50,7 @@
                         <div class="vert-center">
                             <div class="row text-center text-box">
                                 <div class="col-4 col-offset-8">
-                                    <h1>Meer Leads</h1>
+                                    <h1><small>meer</small> <span>leads</span></h1>
                                     <img src="{{ site.url }}/img/temp.png" class="visible-sm">
                                    <p>People don’t just hand over their information to anyone. A reputable site, a delightful submission process and a compelling visual narrative will drive more leads for you.
                                    </p>
@@ -73,6 +73,7 @@
                     </div>
                 </li>
                 <li class="volgers">
+                    <div class="phones overlay"></div>
                     <div class="overlay overlay-img"></div>
                     <div class="overlay pop-up"></div>
                     <div class="container">
